@@ -1,5 +1,13 @@
 2010-02-10  Jaroslav Hajek  <highegg@gmail.com>
 
+	* ov-base.h (octave_base_value::is_list): Remove.
+	* ov.h (octave_value::is_list): Remove.
+	* data.cc (Fislist): Remove.
+	* oct-stream.cc (printf_value_cache::printf_value_cache): Don't call
+	is_list.
+
+2010-02-10  Jaroslav Hajek  <highegg@gmail.com>
+
 	* ov-str-mat.h (octave_char_matrix_str::is_real_type): Delete
 	overload.
 	* data.cc (Fisreal): Improve docs.
