@@ -1,3 +1,7 @@
+2010-02-10  Jaroslav Hajek  <highegg@gmail.com>
+
+	* general/private/__isequal__.m: Remove list-related stub.
+
 2010-02-09  John W. Eaton  <jwe@octave.org>
 
 	* image/imshow.m: Allow logical values for images.
